# sysu-2025-2-parallel-computing

lab/08/: CMakeLists.txt  run.py
lab/08/report/: report.typ
lab/08/report/assets/: hello_world_output.txt  matrix_transpose_metrics.csv
lab/08/src/: hello_world.cu  matrix_transpose.cu
lab/09/: CMakeLists.txt  run.py
lab/09/report/: report.typ
lab/09/report/assets/: metrics.csv
lab/09/src/: matmul.cu
lab/10/: CMakeLists.txt  run.py
lab/10/report/: report.typ
lab/10/report/assets/: metrics.csv
lab/10/src/: benchmark.cpp  benchmark.hpp  convolution.hpp  cpu_reference.cpp  cuda_utils.cuh  cudnn_conv.cpp  direct.cu  gemm.cu  im2col.cu  main.cu  tensor.hpp
